// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate documentation For simple cases 1`] = `
Array [
  Object {
    "defaultValue": undefined,
    "description": "

",
    "flags": Object {
      "isOptional": false,
    },
    "name": "newString",
    "typeName": "string",
  },
]
`;

exports[`Generate documentation deal with more complex types 1`] = `
Array [
  Object {
    "defaultValue": undefined,
    "description": undefined,
    "flags": Object {
      "isOptional": false,
    },
    "name": "all",
    "typeName": "Array",
  },
]
`;
